--- a/src/app/design/frontend/base/default/template/backinstock/cta.phtml
+++ b/src/app/design/frontend/base/default/template/backinstock/cta.phtml
@@ -88,13 +88,13 @@
 
 <?php if ($this->isSimple() && !$this->isSalable() && !Mage::getSingleton('customer/session')->isLoggedIn()): ?>
 
-    <a id="back-stock-modal-controller"><?php echo $this->__('Notify me when this product is back in stock') ?></a>
+    <a id="back-stock-modal-controller"><?php echo $this->__('Notify me when this product is back in stock FOO') ?></a>
 
 <?php endif; ?>
 
 <?php if ($this->isSimple() && !$this->isSalable() && Mage::getSingleton('customer/session')->isLoggedIn()): ?>
 
-    <a data-url="<?php echo $this->generateStockNotificationLink($this->getProduct()) ?>" id="back-in-stock-subscribe"><?php echo $this->__('Notify me when this product is back in stock') ?></a>
+    <a data-url="<?php echo $this->generateStockNotificationLink($this->getProduct()) ?>" id="back-in-stock-subscribe"><?php echo $this->__('Notify me when this product is back in stock BAR') ?></a>
 
     <script>
         BackInStock.link().observe('click', function(event) {
@@ -105,6 +105,7 @@
                 onSuccess: function(response) {
                     console.log(response.responseText);
                     BackInStock.link().update('You will be notified once this product is back in stock.');
+                    BackInStock.link().disable();
                     Event.fire('productAlertWasStored', response);
                 },
                 onFailure: function(response) {
