--- a/src/app/design/frontend/base/default/template/backinstock/modal.phtml
+++ b/src/app/design/frontend/base/default/template/backinstock/modal.phtml
@@ -1,4 +1,5 @@
-<div id="back-in-stock-modal" style="display:none; width: 100%; padding: 40px;">
+
+<div id="back-in-stock-modal" style="display:none;">
 
     <form id="back-in-stock-form" method="POST" action="<?php echo $this->getSubscribeUrl() ?>">
 
