Enable the disable

--- a/src/app/design/frontend/base/default/template/backinstock/cta.phtml
+++ b/src/app/design/frontend/base/default/template/backinstock/cta.phtml
@@ -76,7 +76,7 @@
                     },
                     onSuccess: function(response) {
                         BackInStock.button().update('<?php echo $this->__('Thank you') ?>');
-//                        BackInStock.button().disable();
+                        BackInStock.button().disable();
                         Event.fire('productAlertWasStored', response)
                     }
                 });
