--- a/src/app/design/frontend/base/default/template/backinstock/modal.phtml
+++ b/src/app/design/frontend/base/default/template/backinstock/modal.phtml
@@ -10,7 +10,7 @@
 
         <div class="form-group">
             <label for="email"><?php echo $this->__('Email') ?></label>
-            <input id="email" type="text" name="email">
+            <input id="email" type="text" name="email" required>
         </div>
 
         <div id="missing-children" class="form-group"></div>
